# ClaudeHydra-v4

./: .env.example  .env.local  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  dev.bat  dev.vbs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  release.bat  swarm-visual-task.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vite.config.vercel.ts  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
.serena/: project.yml
.vercel/: project.json
backend/: .env.example  Cargo.toml  Dockerfile  Shuttle.toml  docker-compose.yml  fly.staging.toml  fly.toml
backend/.serena/: project.yml
backend/migrations/: 2026021401_001_init.sql  2026021501_002_tool_interactions.sql  20260215_004_ecosystem_info.sql  2026021601_003_welcome_message.sql  2026021701_004_ecosystem_info.sql  2026022401_005_model_pins.sql  20260224_006_oauth_tokens.sql  2026022601_007_audit_log.sql  2026022805_013_working_directory.sql  2026022807_015_google_auth.sql  20260228_009_github_oauth.sql  20260228_010_vercel_oauth.sql  20260228_011_service_tokens.sql  20260228_012_mcp_support.sql  20260228_014_session_working_directory.sql  2026030102_017_agent_usage.sql  2026030103_018_agent_ab_testing.sql  2026030104_019_ocr_history.sql  2026030105_020_max_iterations.sql  2026030106_021_context_settings.sql  20260301_016_prompt_history.sql  2026031101_024_app_config.sql  2026031501_030_ai_provider_gateway.sql  2026031502_031_drop_old_auth_tables.sql  2026031503_032_performance_profiling.sql  2026031504_033_swarm_ipc.sql  2026031505_034_crdt_documents.sql  2026031506_035_sandbox_environment.sql  2026031506_036_swarm_attachments.sql  2026031508_038_memory_pruning.sql  2026031509_034_semantic_cache.sql  2026031510_038_seed_geralt_mcp_permissions.sql  2026031601_040_agents_config_alignment.sql  2026040401_041_b13_unified_auth.sql  2026041101_042_perf_indexes.sql
backend/scripts/: insert_test_api_key.sql
backend/src/: app_routes.rs  audit.rs  auth.rs  auto_qa.rs  browser_proxy.rs  collab.rs  extractor.rs  handlers.rs  lib.rs  logs.rs  main.rs  memory_pruning.rs  model_registry.rs  models.rs  oauth.rs  oauth_github.rs  oauth_google.rs  oauth_vercel.rs  ocr.rs  rate_limits.rs  sandbox.rs  service_tokens.rs  state.rs  state_agent_helpers.rs  swarm.rs  system_monitor.rs  tools.rs  vault_proxy.rs  watchdog.rs
backend/src/ai_gateway/: handlers.rs  mod.rs  model_router.rs  session_manager.rs
backend/src/ai_gateway/handlers/: helpers.rs  mod.rs  providers.rs  proxy.rs  router.rs
backend/src/ai_gateway/oauth_flows/: manager.rs  mod.rs  pkce.rs
backend/src/handlers/: agents.rs  anthropic_client.rs  chat.rs  files.rs  health.rs  mod.rs  prompt.rs  prompt_history.rs  sessions.rs  settings.rs  streaming.rs  tags.rs
backend/src/handlers/streaming/: agent_call.rs  gemini.rs  helpers.rs  mod.rs  trait_impl.rs
backend/src/handlers/streaming/websocket/: execute.rs  execute_batch.rs  execute_stream.rs  mod.rs
backend/src/mcp/: client.rs  config.rs  mod.rs  server.rs
backend/src/models/: agent_models.rs  chat_models.rs  db_rows.rs  mod.rs  ws_protocol.rs
backend/src/semantic_cache/: compressor.rs  embeddings.rs  handlers.rs  mod.rs  qdrant.rs
backend/src/tools/: fly_tools.rs  fs_tools.rs  git_tools.rs  github_tools.rs  image_tools.rs  mod.rs  pdf_tools.rs  vercel_tools.rs  web_tools.rs
backend/src/tools/web/: crawl.rs  fetch.rs  html.rs  mod.rs  types.rs
backend/tests/: ai_gateway_tests.rs  api_tests.rs  health_test.rs  integration_oauth.rs  integration_ocr.rs  integration_streaming.rs  schema_test.rs  shared_crate_tests.rs  tool_tests.rs
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  COMPONENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN-SYSTEM.md  README.md  TESTING.md  openapi.yaml
e2e/: agents.spec.ts  auth.spec.ts  chat-settings.spec.ts  chat.spec.ts  history.spec.ts  home.spec.ts  navigation.spec.ts  responsive.spec.ts  settings.spec.ts  sidebar.spec.ts  swarm-builder.spec.ts  swarm.spec.ts  test.ts  theme.spec.ts  visual.spec.ts
plans/: planner.sqlite  planner.sqlite-shm  planner.sqlite-wal
playwright-report/: index.html
public/: manifest.json
scripts/: create-shims.js  create-shims.ts  strip-workspace-deps.js  watchdog-visual.mjs
src/: main.js  main.tsx  vite-env.d.ts
(+315 files in other folders)
