[package]
name = "claudehydra-backend"
version = "4.0.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "limit", "set-header"] }
tower_governor = "0.8"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
dotenvy = "0.15"
sysinfo = "0.35"
tokio-stream = "0.1"
async-stream = "0.3"
glob = "0.3"
regex = "1"
dirs = "6"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
http = "1"
shuttle-axum = { version = "0.57.0", optional = true }
shuttle-runtime = { version = "0.57.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }

[features]
default = []
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
